hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__static_array__test__static_array_const_codegen@pre-mem2reg@llvm14_0.snap
---
source: hugr-llvm/src/extension/collections/static_array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@sa.a.97cb22bf.0 = constant { i64, [10 x i64] } { i64 10, [10 x i64] [i64 0, i64 1, i64 2, i64 3, i64 4, i64 5, i64 6, i64 7, i64 8, i64 9] }

define { i64, [0 x i64] }* @_hl.main.1() {
alloca_block:
  %"0" = alloca { i64, [0 x i64] }*, align 8
  %"5_0" = alloca { i64, [0 x i64] }*, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { i64, [0 x i64] }* bitcast ({ i64, [10 x i64] }* @sa.a.97cb22bf.0 to { i64, [0 x i64] }*), { i64, [0 x i64] }** %"5_0", align 8
  %"5_01" = load { i64, [0 x i64] }*, { i64, [0 x i64] }** %"5_0", align 8
  store { i64, [0 x i64] }* %"5_01", { i64, [0 x i64] }** %"0", align 8
  %"02" = load { i64, [0 x i64] }*, { i64, [0 x i64] }** %"0", align 8
  ret { i64, [0 x i64] }* %"02"
}
