hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__static_array__test__static_array_const_codegen@pre-mem2reg@llvm14_1.snap
---
source: hugr-llvm/src/extension/collections/static_array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@sa.b.2fb60ce.0 = constant { i64, [10 x double] } { i64 10, [10 x double] [double 0.000000e+00, double 1.000000e+00, double 2.000000e+00, double 3.000000e+00, double 4.000000e+00, double 5.000000e+00, double 6.000000e+00, double 7.000000e+00, double 8.000000e+00, double 9.000000e+00] }

define { i64, [0 x double] }* @_hl.main.1() {
alloca_block:
  %"0" = alloca { i64, [0 x double] }*, align 8
  %"5_0" = alloca { i64, [0 x double] }*, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { i64, [0 x double] }* bitcast ({ i64, [10 x double] }* @sa.b.2fb60ce.0 to { i64, [0 x double] }*), { i64, [0 x double] }** %"5_0", align 8
  %"5_01" = load { i64, [0 x double] }*, { i64, [0 x double] }** %"5_0", align 8
  store { i64, [0 x double] }* %"5_01", { i64, [0 x double] }** %"0", align 8
  %"02" = load { i64, [0 x double] }*, { i64, [0 x double] }** %"0", align 8
  ret { i64, [0 x double] }* %"02"
}
